# Python_Eiit_RyR

./: .gitignore  Python_Eiit_RyR.code-workspace  README.md  RyR.py  RyR_Generator_v4.0.rar  test.py  workspace.code-workspace
Generador RyR/: Instrucciones de uso.docx
Limit_Calculator (to-do)/: Sequence File 1.seq  limit_calculator.py  test.py
RyR_Analyser/: RyR classifier.ipynb  RyR filter.ipynb  RyR.ipynb  data.xlsx
RyR_Generator/: Software.lnk
Tests/: functions.py  main.py
UI/: engine.py  functions.py  gui.py
a1_RyR_Generator/: archive.rar
a1_RyR_Generator/v14.0/app/src/: _db_tools.py  core_logic.py  intelligent_cameras.py  main.py  main.spec  pyproject.toml  test.py
a1_RyR_Generator/v14.0/app/src/logic/: light_guides.py
a1_RyR_Generator/v14.0/app/src/tools/: _db_tools.py  database.py
a1_RyR_Generator/v15.0/: README.md  Run_app.ps1  pyproject.toml  quick install.txt
a1_RyR_Generator/v15.0/app/resources/: help.json
a1_RyR_Generator/v15.0/app/src/: configuration.py  core_logic.py  custom_entry_widget.py  database.py  main.py  test_database_view.py
a1_RyR_Generator/v15.0/app/src/db_connection/: _db_tools.py  database.py
a1_RyR_Generator/v15.0/app/src/logic/: light_guides.py
a1_RyR_Generator/v15.0/app/test/: test.py
a2_Analyser/: Run_venv.ps1  _prepare_software.py  requirements.txt
a2_Analyzer/: README.md  Run_app.ps1
a2_RyR_Analyser/: README.md
a3_Wire_Section_Calculator/: README.md
a7_hyphotesis_testing/: pyproject.toml
a7_hyphotesis_testing/src/: cdf.py  hypothesis_testing.ipynb  plots.py  utilities_database.py
(+284 files in other folders)
