[tool.poetry]
name = "a7-hyphotesis-testing"
version = "0.1.0"
description = ""
authors = ["Luciano <lucianogpingindustrial@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
