[tool.poetry]
name = "ryr-generator"
version = "14.0"
description = ""
authors = ["Luciano <lucianogpingindustrial@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <=3.11"
numpy = "1.23.5"
openpyxl = "3.1.2"
pandas = "1.5.3"
tk = "0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
